--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "react-star-rating-component": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
